updated file paths for virtual environment compatibility

--- a/NFL Project/NFL-Prediction-Model_JohnReed.ipynb
+++ b/NFL Project/NFL-Prediction-Model_JohnReed.ipynb
@@ -282,8 +282,7 @@
    "id": "04f0734c",
    "metadata": {
     "hideCode": false,
-    "hidePrompt": false,
-    "scrolled": false
+    "hidePrompt": false
    },
    "outputs": [
     {
@@ -457,8 +456,7 @@
    "id": "790584e6",
    "metadata": {
     "hideCode": false,
-    "hidePrompt": false,
-    "scrolled": false
+    "hidePrompt": false
    },
    "outputs": [
     {
@@ -1641,8 +1639,7 @@
    "id": "c238a879",
    "metadata": {
     "hideCode": false,
-    "hidePrompt": false,
-    "scrolled": true
+    "hidePrompt": false
    },
    "outputs": [
     {
@@ -5039,8 +5036,7 @@
    "id": "f11453b3",
    "metadata": {
     "hideCode": false,
-    "hidePrompt": false,
-    "scrolled": false
+    "hidePrompt": false
    },
    "outputs": [
     {
@@ -5811,7 +5807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
