Updated .ipynb file with new paths

--- a/NFL Project/NFL-Prediction-Model_JohnReed.ipynb
+++ b/NFL Project/NFL-Prediction-Model_JohnReed.ipynb
@@ -373,10 +373,6 @@
     "independent_vars = data.columns.tolist()\n",
     "independent_vars.remove(dependent_var)\n",
     "\n",
-    "# Line to exclude certain variables\n",
-    "# excluded_vars = ['Var1', 'Var2']  # Uncomment and replace with variables to exclude\n",
-    "# independent_vars = [var for var in independent_vars if var not in excluded_vars]\n",
-    "\n",
     "# Prepare the data for regression\n",
     "X = data[independent_vars]\n",
     "y = data[dependent_var]\n",
@@ -389,41 +385,6 @@
     "\n",
     "# Print the regression results\n",
     "print(model.summary())\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ed7b5c74",
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "source": [
-    "#### 3.2 Removal of scoring variables that drive model  \n",
-    "\n",
-    "We can already see from this regression summary that the variables that directly involve scoreing completely drive the model.\n",
-    "\n",
-    "Defensive/Special Teams TDs: Defensive/special teams touchdowns\n",
-    "\n",
-    "Pass TDs: Passing touchdowns\n",
-    "\n",
-    "Rush TDs: Rushing touchdowns\n",
-    "\n",
-    "XPM: Extra points made\n",
-    "\n",
-    "XPA: Extra points attempted\n",
-    "\n",
-    "FGM: Field goals made\n",
-    "\n",
-    "FGA: Field goals attempted\n",
-    "\n",
-    "RZ ATT: Red zone attempts\n",
-    "\n",
-    "RZ Conv: Red zone conversions\n",
-    "\n",
-    "By removing these scoring variables, the model will be challenged to identify other influential factors that contribute to the final game scores, such as team performance metrics, player statistics, and situational factors. This approach enhances the model's ability to generalize from the data and improves its utility for making predictions in scenarios where direct scoring information is not available. The goal is to build a model that relies on indirect indicators and broader performance metrics, thereby offering more strategic insights for predicting NFL game outcomes. \n",
-    "\n",
-    "We can tell the model is currently depending on these variables based on the coefficients for these metrics. Notice tat the coefficient for 'FGM' which indicates Field Goals Made is 2.7189, this is nearly exactly equal to the value of a field goal which is three points.\n"
    ]
   },
   {
@@ -575,32 +536,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1071f811",
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "source": [
-    "#### Weather\n",
-    "\n",
-    "I initially wanted to create a Weather variable because simply calculating the averages of different weather types in the overall data we can clearly see that there is a discrepancy in the dependent variable 'Score'. I tried multiple ways to try and get the model to recognize the variable but it was never selected as significant. This is the code I tried to implement.\n",
-    "\n",
-    "\n",
-    "Overall average: 21.9 points per game (ppg)\n",
-    "\n",
-    "Clear, cloudy, overcast: 22.56 ppg\n",
-    "\n",
-    "Rain: 19.275 ppg\n",
-    "\n",
-    "Snow: 17.1 ppg (3 observations)\n",
-    "\n",
-    "Wind: 18.869 ppg\n",
-    "\n",
-    "Wind with rain or snow: 17.1 ppg"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3c631ca4",
    "metadata": {},
    "source": [
@@ -679,7 +614,6 @@
     "\n",
     "#drop the original 'Wthr' column if it's no longer needed\n",
     "data.drop('Wthr', axis=1, inplace=True)\n",
-    "\n",
     "\n",
     "\n",
     "# Save the modified dataframe to a new CSV file\n",
@@ -768,7 +702,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('NFL{Defence}_modified.csv')  # Assume this file includes all preprocessing steps done previously\n",
+    "data = pd.read_csv('NFL{Defence}_modified.csv') \n",
     "\n",
     "# List of columns to exclude\n",
     "columns_to_exclude = [\n",
@@ -1630,7 +1564,7 @@
    "source": [
     "### 3.5 Scatterplots and Distributions\n",
     "\n",
-    "Before removal i will check the plots of the predictor variables"
+    "Before removing, I will first check the plots of the predictor variables"
    ]
   },
   {
@@ -2148,23 +2082,6 @@
    "source": [
     "\n",
     "The outlier at the far right of the plot indicates a game where the model predicted a very high score, and the actual score was also high with a small deviation. This suggests that the model performed well in this case. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "77fabf93",
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "source": [
-    "#### 4.2 Outliers\n",
-    "\n",
-    "Although observation 199 is not an outlier. I will speak about it in this section to explain issues with the outliers. As before mentioned given the unpredictable nature of NFL games, the presence of outliers is expected. It is nearly impossible to predict exact scores due to the unpredictability of human performance. The important thing to consider is that this model is competing against Vegas. The goal of this project is to create a model that better predicts the lines of games better than vegas. \n",
-    "\n",
-    "-Observation 199 is a great example of how the model is perfroming well. Of all games in the model, 70 was the highest recorded score. For the model to predict a score of nearly 65 is impressive considering the second highest recorded score in the model was 63. Vegas also had predicted a score of 26.5 for this team indicating our model is performing well. This game happened in week 3, so Vegas only had information from the previous two weeks of games whereas I have the data from the whole season which is important to consider. \n",
-    "\n",
-    "The second highest recorded score brings me to outlier 263 which is our largest outlier in the model. I have included observation 247 in this analysis also as this was the team observation 263 played against in the game. This was expected to be a low scoreing game with Vegas predicting a total score of 36.5 for the game, my model predicted a total score of 57 for the game. The total score in the game was 84. As mentioned before we are to expect outliers when modeling sports. These outliers represent exceptional or poor performances from certain players and teams that were unexpected to happen. For example the favorite doesnt always win in sporting events but most model would predict the favorite in most circumstances. This same analysis can be applied to all my outliers in the model, all the outliers are underpredicted score rather than overpredicted. The table is provided to show the the fitted, actual values, and vegas predictions."
    ]
   },
   {
@@ -3370,7 +3287,7 @@
    ],
    "source": [
     "# Directory containing team CSV files\n",
-    "directory = '/users/johnreed/Downloads/Machine learning/NFL_Teams/Team_CSVs'\n",
+    "directory = 'NFL_Teams/Team_CSVs'\n",
     "\n",
     "# Initialize empty DataFrame to store all games\n",
     "all_games = []\n",
